--- a/LightSpeed/Templates/LightSpeed/home.html
+++ b/LightSpeed/Templates/LightSpeed/home.html
@@ -8,5 +8,7 @@
         <br>
         <a href="{{ config.url_access_code }}">Click here to get a access code from LightSpeed</a>
         <br><br>
+        <a href="{%  url 'ls_item' %}" type="submit" class="btn btn-primary">See all Items</a>
+        <br><br>
         <p class="alert-warning">Message : {{ config.message }}</p>
 {% endblock %}
