--- a/LightSpeed/Templates/LightSpeed/base.html
+++ b/LightSpeed/Templates/LightSpeed/base.html
@@ -7,10 +7,38 @@
     <title>Title</title>
 </head>
 <body>
+{%  load static %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <img src="{% static 'LightSpeed/images/logoNav.jpg' %}" width="30"; height="30">&nbsp;&nbsp;<h2 class="text text-light">PrestaLight</h2> &nbsp; &nbsp;| &nbsp;
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-
-{% block content %}
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'homePage' %}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'ls_item' %}">Item</a>
+      </li>
+          <li class="nav-item active">
+        <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<div class="container-fluid">
+  {% block content %}
 {% endblock %}
+</div>
+</div>
+</div>
+
 
 </body>
 </html>
